--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -59,7 +59,7 @@ Now the trophy case has an empty spot...for now.
 
 ![](gfx/faculty_graduation_2025.png)
 
--   **Randi Garcia** began her term as Chair of SDS while Ben took a yearlong sabbatical in Colombia. See more in their updates below.
+-   In Fall 2023 **Randi Garcia** began her term as Chair of SDS while Ben took a yearlong sabbatical in Colombia. See more in their updates below.
 -   **Shiya Cao** and **Kaitlyn Cook** were reappointed!
 -   We hired **Nikko Stevens**, **Gillian Beltz-Mohrmann**, and **Jericho Lawson** who begin their positions on July 1.
 -   Ben's article [*Big ideas in sports analytics and statistical tools for their investigation*](https://wires.onlinelibrary.wiley.com/doi/abs/10.1002/wics.1612) was recognized as a top cited article in WIREs Computational Statistics.
