--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -84,6 +84,10 @@ This summer I'm putting together a course on sports analytics (SDS 355) for the 
 
 Outside of work, I'm coaching my daughters' basketball and softball teams, and we got a dog (a miniature schnauzer-terrier mix) who likes to bark at other dogs.
 
+#### Gillian Beltz-Mohrmann
+
+I am very excited to join the SDS Program (as well as the Physics Department) at Smith this Fall! I recently completed a postdoctoral research fellowship in the Cosmological Physics and Advanced Computing Group at Argonne National Laboratory. This semester I am looking forward to teaching SDS 271: Introduction to Data Science in Python, as well as SDS 291: Multiple Regression. I am thrilled to be joining the Smith and Northampton communities.
+
 #### [Shiya Cao](https://scao53.github.io/)
 
 Year 3’s reappointment dossier preparation and review process helped me engage in systematic and in-depth reflection on my research and teaching practices.
@@ -169,6 +173,10 @@ We are continuing our work this Fall by using text analysis to track the influen
 
 This upcoming year, I will be teaching my *Research Seminar in Political Networks* (SDS/GOV 338) in the Fall, and plan on teaching *Research Design and Analysis* (SDS 290) and *Introduction to American Politics* (GOV 200) in the Spring.
 
+#### Jericho Lawson
+
+#### Ab Mosca '14
+
 #### [Lindsay Poirier](https://lindsaypoirier.github.io/)
 
 Hello SDS friends! This year marked my fourth year at Smith, and the first time in my career that I was able to witness students that I taught in their first year of college walk across a stage at commencement. It was both a thrilling and emotional experience for me!
@@ -179,15 +187,9 @@ I taught *SDS 237: Data Ethnography* in both the Fall and Spring semesters. I co
 
 Outside of academic life, I've been continuing to work on improving my French, and I've been relaxing with a number of meditative sewing and knitting projects. I'm looking forward to what's in store in the coming year!
 
-#### Kementari Whitcher
-
-#### Ab Mosca '14
-
 #### Nikko Stevens
 
-#### Gillian Beltz-Mohrmann
-
-I am very excited to join the SDS Program (as well as the Physics Department) at Smith this Fall! I recently completed a postdoctoral research fellowship in the Cosmological Physics and Advanced Computing Group at Argonne National Laboratory. This semester I am looking forward to teaching SDS 271: Introduction to Data Science in Python, as well as SDS 291: Multiple Regression. I am thrilled to be joining the Smith and Northampton communities.
+#### Kementari Whitcher
 
 ## Alumni Updates
 
@@ -203,7 +205,7 @@ Many of us will be at the [2025 Joint Statistical Meetings](https://ww2.amstat.o
 Don't miss these events featuring Smithies and current faculty!
 
 -   [Analysis of Analytic Treatment Interruption Trials with Misclassified Interval-Censored](https://ww3.aievolution.com/JSMAnnual2025/Events/viewEv?ev=4523)\
-    Skyler Williams and Kaitlyn Cook
+    Skyler Williams '25 and Kaitlyn Cook
 -   [Data-Driven Writing Prompts (for Humans): Creative Writing Meets Data Storytelling](https://ww3.aievolution.com/JSMAnnual2025/Events/viewEv?ev=2175)\
     Sara Stoudt '15
 -   [Artisanal Programming](https://ww3.aievolution.com/JSMAnnual2025/Events/viewEv?ev=2175)\
