added contact information

--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -8,7 +8,8 @@ editor:
 ---
 
 Please join our [Facebook group](https://www.facebook.com/groups/665780273559948/), Google group, LinkedIn group, and [Slack](https://twitter.com/Miles_Ott/status/1242104426921426945) for more updates and to stay connected.
-**Please help us reach out to other alumnae by having them contact me!**
+
+**Please help us reach out to other alumnae by having them contact Randi, rgarcia@gmail.com!**
 
 ## Program Updates
 
