--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -60,7 +60,7 @@ Now the trophy case has an empty spot...for now.
 
 -   In Fall 2023 **Randi Garcia** began her term as Chair of SDS while Ben took a yearlong sabbatical in Colombia. See more in their updates below.
 -   **Shiya Cao** and **Kaitlyn Cook** were reappointed!
--   We hired **Nikko Stevens**, **Gillian Beltz-Mohrmann**, and **Jericho Lawson** who begin their positions on July 1.
+-   We hired **Nikko Stevens**, **Gillian Beltz-Mohrmann** (joint with PHY), and **Jericho Lawson** who begin their positions on July 1. We also hired **Katherine Clemans**, a faculty member in Smith's psychology department, to now be joint with SDS!
 -   Ben's article [*Big ideas in sports analytics and statistical tools for their investigation*](https://wires.onlinelibrary.wiley.com/doi/abs/10.1002/wics.1612) was recognized as a top cited article in WIREs Computational Statistics.
 -   Ben was recognized as a [Fellow of the ASA](https://www.amstat.org/news-listing/2025/04/21/asa-recognizes-2025-founders-and-fellows)
 
@@ -174,6 +174,8 @@ This upcoming year, I will be teaching my *Research Seminar in Political Network
 #### [Jericho Lawson](https://www.smith.edu/people/jericho-lawson)
 
 #### [Ab Mosca '14](https://www.smith.edu/people/ab-mosca)
+
+#### [Katherine Clemans](https://www.smith.edu/people/katherine-clemans)
 
 #### [Lindsay Poirier](https://lindsaypoirier.github.io/)
 
