--- a/awards.qmd
+++ b/awards.qmd
@@ -45,7 +45,7 @@ The [Five College Statistics](https://www.fivecolleges.edu/statistics/) prize is
 - 2015: Weijia (Vega) Zhang '18 *(outstanding non-senior)*
 
 	
-## Departmental Honors
+## Departmental Honors in Statistical and Data Sciences (SDS) and Mathematical Statistics (MST)
 
 
 ```{r}
@@ -53,19 +53,19 @@ The [Five College Statistics](https://www.fivecolleges.edu/statistics/) prize is
 library(tidyverse)
 honors <- tribble(
   ~year, ~student, ~designation, ~title, ~id, ~first_reader, ~second_reader,
-  2025, "Elm Markert '25", "Highest Honors", "Towards a 16S rRNA Sequence Analysis Pipeline: Exploring Statistical Methods for Taxonomic Assignment", NA, "Kaitlyn Cook", "Luce Ward",
-  2025, "Tillie Slosser '25", "Highest Honors", "Spatiotemporal Interpolation of Wildfire Smoke-Derived PM2.5 using Deep Neural Networks", NA, "Scott LaCombe", "Andrew Berke",
+  2025, "Elm Markert '25", "Highest Honors (SDS)", "Towards a 16S rRNA Sequence Analysis Pipeline: Exploring Statistical Methods for Taxonomic Assignment", NA, "Kaitlyn Cook", "Luce Ward (GEO)",
+  2025, "Tillie Slosser '25", "Highest Honors (SDS)", "Spatiotemporal Interpolation of Wildfire Smoke-Derived PM2.5 using Deep Neural Networks", NA, "Scott LaCombe", "Andrew Berke (CHM)",
   2025, "Skyler Williams '25", "Highest Honors (MST)", "Analysis of Analytical Treatment Interruption Trials with Misclassified Interval-Censored Data", NA, "Kaitlyn Cook", "Rebecca Kurtz-Garcia",
   2024, "Heng (Silvia) Song '24", "High Honors (MST)", "Stochastic Processes and their Application in Bayesian Statistics", NA, "Kaitlyn Cook", "Jen Beichman (MTH)",
-  2023, "Quinn White '23", "Highest Honors", "Using Sensitivity Analyses to Approximate Total COVID-19 Infections: State and County level in the United States, March 2021--March 2022", NA, "Ben Baumer", "Nick Reich (UMass)",
-  2022, "Natalia Iannucci '22", "Highest Honors", "Improving Mutational Signature Detection in Cancer through Frequentist and Bayesian Hypothesis Testing", 2446, "Ben Baumer", "Giovanni Parmigiani (Harvard)",
-  2021, "Audrey Bertin '21", "Highest Honors", "Addressing The Scientific Reproducibility Crisis Through Educational Software Integration", 2317, "Ben Baumer", "Albert Kim",
-  2020, "Jessica Keast '20", "Highest Honors", "Twang Identification in American Folk and Country Music", 2227, "Katherine Kinnaird", "Albert Kim",
-  2020, "Aoi Ogawa '20", "High Honors", "Estimating Microbial Diversity of Toxin Producing Bacteria from Soil Using Cellular Automata", 2251, "Katherine Halvorsen", "Chris Golé (MTH)", 
-  2020, "Ziwei (Crystal) Zang '20", "High Honors", "Metabolites Prediction in Multiple Studies Using Machine Learning", 2290, "Katherine Halvorsen", "Ed Resnick (Memorial Sloan Kettering)",
-  2019, "Julianna Alvord '19", "Highest Honors", "Modeling Racially Disproportionate Language on Twitter during NFL Gameplay", 2108, "Randi Garcia", "Ben Baumer",
-  2018, "Wencong (Priscilla) Li '18", "Highest Honors", "Tools for understanding taxicab and e-hail service use in New York City", 2032, "Ben Baumer", "Jordan Crouser", 
-  2017, "Weijia (Vega) Zhang '17", "High Honors", "Improving access to open-source data about the NYC bike sharing system (Citi Bike", 1871, "Ben Baumer", "Jordan Crouser",
+  2023, "Quinn White '23", "Highest Honors (SDS)", "Using Sensitivity Analyses to Approximate Total COVID-19 Infections: State and County level in the United States, March 2021--March 2022", NA, "Ben Baumer", "Nick Reich (UMass)",
+  2022, "Natalia Iannucci '22", "Highest Honors (SDS)", "Improving Mutational Signature Detection in Cancer through Frequentist and Bayesian Hypothesis Testing", 2446, "Ben Baumer", "Giovanni Parmigiani (Harvard)",
+  2021, "Audrey Bertin '21", "Highest Honors (SDS)", "Addressing The Scientific Reproducibility Crisis Through Educational Software Integration", 2317, "Ben Baumer", "Albert Kim",
+  2020, "Jessica Keast '20", "Highest Honors (SDS)", "Twang Identification in American Folk and Country Music", 2227, "Katherine Kinnaird", "Albert Kim",
+  2020, "Aoi Ogawa '20", "High Honors (SDS)", "Estimating Microbial Diversity of Toxin Producing Bacteria from Soil Using Cellular Automata", 2251, "Katherine Halvorsen", "Chris Golé (MTH)", 
+  2020, "Ziwei (Crystal) Zang '20", "High Honors (SDS)", "Metabolites Prediction in Multiple Studies Using Machine Learning", 2290, "Katherine Halvorsen", "Ed Resnick (Memorial Sloan Kettering)",
+  2019, "Julianna Alvord '19", "Highest Honors (SDS)", "Modeling Racially Disproportionate Language on Twitter during NFL Gameplay", 2108, "Randi Garcia", "Ben Baumer",
+  2018, "Wencong (Priscilla) Li '18", "Highest Honors (SDS)", "Tools for understanding taxicab and e-hail service use in New York City", 2032, "Ben Baumer", "Jordan Crouser", 
+  2017, "Weijia (Vega) Zhang '17", "High Honors (SDS)", "Improving access to open-source data about the NYC bike sharing system (Citi Bike", 1871, "Ben Baumer", "Jordan Crouser",
 )
 honors |>
   mutate(
