--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -114,9 +114,10 @@ Outside of work, a new thing I have been participating in this summer is [a seri
 
 #### [Kaitlyn Cook](https://www.smith.edu/people/kaitlyn-cook)
 
-This past academic year I enjoyed teaching *SDS 291: Multiple Regression* and *SDS 220: Introduction to Probability and Statistics*, as well as supervising several super-star honors thesis students on projects related to statistical methods for taxonomy assignment (*Elm Markert '25*) and misclassified interval-censored data (*Skyler Williams '25*).
+This past academic year I enjoyed teaching *SDS 291: Multiple Regression* and *SDS 220: Introduction to Probability and Statistics*, as well as supervising several super-star honors thesis students on projects related to statistical methods for taxonomy assignment (**Elm Markert '25**) and misclassified interval-censored data (**Skyler Williams '25**).
+
 Outside of the classroom, I've continued settling into life in the Valley by joining a local run club in Northampton, playing trumpet with the Amherst Community Band, and watching far too much reality TV from my couch.
-My biggest reality TV accomplishment to date is watching the entirety of *Real Housewives of Salt Lake City* in under three weeks; recommendations for my next *Real Housewives* franchise are highly welcomed and encouraged.
+My biggest reality TV accomplishment to date is watching the entirety of Real Housewives of Salt Lake City in under three weeks; recommendations for my next Real Housewives franchise are highly welcomed and encouraged.
 
 #### [Randi Garcia](https://www.randilgarcia.com/)
 
