added Priscilla's update

--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -219,6 +219,8 @@ I'm looking forward to what's in store in the coming year!
     I’ve been loving DC so far, roller skating, singing in a local choir, knitting many socks, and playing D&D with a bunch of fellow former Lamont pals every once in a blue moon.
     Hope y’all are doing so well!
 
+-   Priscilla Wencong Li '18 - I will take a break from being a Data Scientist and start my MBA at Wharton this fall!
+
 ## What's next?
 
 ### Joint Statistical Meetings
