--- a/cap.qmd
+++ b/cap.qmd
@@ -11,7 +11,7 @@ gs4_deauth()
 cap_majors <- "1fb5eyByIO1ykq_pqUFKbl200mp8gD8qjPyuKwL2WfA4" |>
   read_sheet(sheet = "majors", na = "---") |>
   janitor::clean_names() |>
-  pivot_longer(cols = -department, names_to = "AY", values_to = "majors") |>
+  pivot_longer(cols = -unit, names_to = "AY", values_to = "majors") |>
   mutate(AY = parse_number(AY) + 1)
   # rowwise() |>
   # mutate(
@@ -22,20 +22,20 @@ cap_majors <- "1fb5eyByIO1ykq_pqUFKbl200mp8gD8qjPyuKwL2WfA4" |>
 cap_fte <- "1fb5eyByIO1ykq_pqUFKbl200mp8gD8qjPyuKwL2WfA4" |>
   read_sheet(sheet = "fte", na = "---") |>
   janitor::clean_names() |>
-  pivot_longer(cols = -department, names_to = "AY", values_to = "fte") |>
+  pivot_longer(cols = -unit, names_to = "AY", values_to = "fte") |>
   mutate(AY = parse_number(AY))
 
 cap_enroll <- "1fb5eyByIO1ykq_pqUFKbl200mp8gD8qjPyuKwL2WfA4" |>
   read_sheet(sheet = "enrollments", na = "---") %>%
   janitor::clean_names() |>
-  pivot_longer(cols = -department, names_to = "AY", values_to = "enrollment") |>
+  pivot_longer(cols = -unit, names_to = "AY", values_to = "enrollment") |>
   mutate(
     AY = parse_number(AY) + 1
   )
 
 cap <- cap_fte |>
-  full_join(cap_majors, by = join_by(department, AY)) |>
-  full_join(cap_enroll, by = join_by(department, AY))
+  full_join(cap_majors, by = join_by(unit, AY)) |>
+  full_join(cap_enroll, by = join_by(unit, AY))
 ```
 
 
@@ -45,11 +45,12 @@ cap <- cap_fte |>
 cap |>
   group_by(AY) |>
   summarize(
-    num_depts = n_distinct(department),
+    num_units = n_distinct(unit),
     num_fte = sum(fte, na.rm = TRUE),
     num_majors = sum(majors, na.rm = TRUE),
     num_enrollees = sum(enrollment, na.rm = TRUE)
-  )
+  ) |>
+  knitr::kable()
 ```
 
 I think the jump in FTE in 2024 is due to the reclassification on teaching-focused faculty. 
@@ -57,7 +58,7 @@ I think the jump in FTE in 2024 is due to the reclassification on teaching-focus
 ```{r}
 cap_recent <- cap |>
   filter(AY > 2021) |>
-  group_by(department) |>
+  group_by(unit) |>
   summarize(
     fte = last(fte),
     majors_3 = mean(majors, na.rm = TRUE),
@@ -70,20 +71,20 @@ cap_recent <- cap |>
 ```{r}
 #| warning: false
 cap |>
-  group_by(department) |>
+  group_by(unit) |>
   summarize(
     fte_2020 = sum(ifelse(AY == 2020, fte, 0)),
     fte_2024 = sum(ifelse(AY == 2024, fte, 0))
   ) |>
   drop_na(fte_2024) |>
   mutate(
-    dept = fct_reorder(department, fte_2024),
+    unit = fct_reorder(unit, fte_2024),
     is_up = fte_2024 > fte_2020
   ) |>
-  ggplot(aes(x = dept, y = fte_2020)) +
+  ggplot(aes(x = unit, y = fte_2020)) +
   geom_point() + 
   geom_segment(
-    aes(xend = dept, yend = fte_2024, color = is_up), 
+    aes(xend = unit, yend = fte_2024, color = is_up), 
     arrow = arrow(length = unit(0.2, "cm"))
   ) +
   scale_color_brewer("Growing?", palette = "Set2") +
@@ -134,7 +135,7 @@ ggplot(cap_recent, aes(x = fte, y = majors_3)) +
   ) + 
   geom_point() + 
   geom_smooth(method = "lm", se = 0) + 
-  ggrepel::geom_label_repel(aes(label = department, fill = department %in% c("CSC", "SDS"))) + 
+  ggrepel::geom_label_repel(aes(label = unit, fill = unit %in% c("CSC", "SDS"))) + 
   geom_curve(
     data = arrows,
     aes(xend = xend, yend = yend), 
@@ -159,20 +160,20 @@ ggsave(here::here("college_wide/cap/majors_per_fte_2025.png"), width = 8, height
 # Enrollments
 
 ```{r}
-large_depts <- cap_enroll |>
+large_units <- cap_enroll |>
   filter(enrollment > 800) |>
-  pull(department) |>
+  pull(unit) |>
   unique()
 cap_enroll |>
-  filter(department %in% large_depts) |>
-  ggplot(aes(x = AY, y = enrollment, color = department)) +
+  filter(unit %in% large_units) |>
+  ggplot(aes(x = AY, y = enrollment, color = unit)) +
   geom_point() +
   geom_line() +
   scale_color_brewer(palette = "Set3") + 
   scale_y_continuous("Total CAP Enrollments") +
   scale_x_continuous("Academic Year") +
   labs(
-    title = "Total CAP Enrollments for large departments", 
+    title = "Total CAP Enrollments for large units", 
     subtitle = "AY 2014-2024"
   )
 ```
@@ -188,9 +189,9 @@ ggsave(here::here("college_wide/cap/enrollment_growth_2025.png"), width = 8, hei
 ```{r}
 cap_current <- cap |>
   filter(AY == 2024) |>
-  group_by(department) |>
+  group_by(unit) |>
   summarize(
-    num_units = n_distinct(department),
+    num_units = n_distinct(unit),
     num_enrolled = sum(enrollment, na.rm = TRUE),
     num_fte = sum(fte, na.rm = TRUE),
     num_majors = sum(majors, na.rm = TRUE)
@@ -217,7 +218,7 @@ ggplot(cap_current, aes(x = num_fte, y = num_enrolled)) +
   geom_abline(intercept = 0, slope = 1:7 * 20, linetype = 3) +
   geom_text(data = regions, aes(label = label), size = 2) +
   geom_point() + 
-  ggrepel::geom_label_repel(aes(label = department, fill = department %in% c("SDS", "CSC"))) +
+  ggrepel::geom_label_repel(aes(label = unit, fill = unit %in% c("SDS", "CSC"))) +
   labs(
     title = "Enrollment per FTE",
     subtitle = "Based on CAP’s 2025 Annual Report. Figures are for 2023-2024."
@@ -240,7 +241,7 @@ ggsave(here::here("college_wide/cap/enrollment_fte_2025.png"), width = 8, height
 ```{r}
 cap |>
   filter(AY > 2019) |>
-  group_by(department) |>
+  group_by(unit) |>
   summarize(
     num_years = n(),
     enroll_avg_5 = mean(enrollment, na.rm = TRUE),
@@ -252,7 +253,8 @@ cap |>
     mean_enrollment_fte = enroll_avg_5 / current_fte,
   ) |> 
   arrange(desc(majors_avg_5)) |>
-  filter(enroll_avg_5 > 200)
+  filter(enroll_avg_5 > 200) |>
+  knitr::kable(digits = 2)
 ```
 
 ## Most understaffed unit-AY pairs
@@ -263,6 +265,7 @@ cap |>
   mutate(
     enrollment_fte = enrollment / fte,
   ) |> 
-  arrange(desc(enrollment_fte))
+  arrange(desc(enrollment_fte)) |>
+  knitr::kable(digits = 2)
 ```
 
