--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -176,6 +176,10 @@ This upcoming year, I will be teaching my *Research Seminar in Political Network
 
 #### [Jericho Lawson](https://www.smith.edu/people/jericho-lawson)
 
+Hi everyone! I'm so excited to join the SDS department for the upcoming school year! The past year has been hectic to say the least. I just wrapped up PhD work at the University of California, Riverside, and while I am truly relieved to have finished, the feeling is definitely bittersweet. There were definitely many long nights of studying, fun moments with colleagues and friends, and lots of dry-erase markers thrown out from writing continuously on a whiteboard. 
+
+I am ready to join the Smith community and cannot wait to teach y'all during the school year. I am delighted to teach SDS 192: Introduction to Data Science and SDS 270: Programming for Data Science in R this year. As I'm preparing to settle in, I'm slowly creating a list of restaurants and hiking spots in the area to explore; if you have any recommendations, let me know!
+
 #### [Ab Mosca '14](https://www.smith.edu/people/ab-mosca)
 
 #### [Katherine Clemans](https://www.smith.edu/people/katherine-clemans)
