--- a/cap.qmd
+++ b/cap.qmd
@@ -254,7 +254,10 @@ cap |>
   ) |> 
   arrange(desc(majors_avg_5)) |>
   filter(enroll_avg_5 > 200) |>
-  knitr::kable(digits = 2)
+  mutate(
+    across(where(is.numeric), \(x) round(x, 2))
+  ) |>
+  DT::datatable()
 ```
 
 ## Most understaffed unit-AY pairs
@@ -266,6 +269,9 @@ cap |>
     enrollment_fte = enrollment / fte,
   ) |> 
   arrange(desc(enrollment_fte)) |>
-  knitr::kable(digits = 2)
+  mutate(
+    across(where(is.numeric), \(x) round(x, 2))
+  ) |>
+  DT::datatable()
 ```
 
